--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 packages = [
-    {include = "*.py"}
+    {include = "*.py"},
+    { include = "*.py", from = "classes" }
 ]
 
 [tool.poetry.dependencies]
